[gd_scene load_steps=17 format=3 uid="uid://bwwv1w4tn5b28"]

[ext_resource type="Script" path="res://Scenes/mainmenu/mainmenu.gd" id="1_e6pdu"]
[ext_resource type="FontFile" uid="uid://dh3g4jbn5a1op" path="res://shaz_fonts/Mael.ttf" id="2_85lks"]
[ext_resource type="Texture2D" uid="uid://dsyie81qbyna3" path="res://shaz_images/pixel_art_pixel_art_tall_tower_1-gigapixel-cgi-6x.jpeg" id="2_oef5t"]
[ext_resource type="FontFile" uid="uid://f3bxx2ry3bsw" path="res://shaz_fonts/BLKCHCRY.TTF" id="3_mrjki"]
[ext_resource type="AudioStream" uid="uid://bhnfdxn0m6r6f" path="res://shaz_audio/SFX/clicksfx.mp3" id="5_7a3fo"]
[ext_resource type="Texture2D" uid="uid://bpw7x46s8xaas" path="res://shaz_images/icons/sword-svgrepo-com.svg" id="5_n7u76"]
[ext_resource type="AudioStream" uid="uid://dak14mahdsqiw" path="res://shaz_audio/music/auf-grunen-wiesen.mp3" id="6_n4uxm"]
[ext_resource type="Texture2D" uid="uid://bgo27ju8e1mld" path="res://shaz_images/icons/settings-svgrepo-com.svg" id="6_owkjg"]
[ext_resource type="Texture2D" uid="uid://ki4uora7ofry" path="res://shaz_images/icons/quit-svgrepo-com.svg" id="8_ta4wk"]
[ext_resource type="AudioStream" uid="uid://dsrvt5qhrkmil" path="res://shaz_audio/SFX/hoversfx.mp3" id="10_33fa0"]
[ext_resource type="Texture2D" uid="uid://b2bml5xl65kk1" path="res://shaz_images/tree_branch-removebg-preview.png" id="11_dmb41"]
[ext_resource type="AudioStream" uid="uid://cf7bipeioldwe" path="res://shaz_audio/SFX/cartoonbasssfx.mp3" id="12_82dxi"]
[ext_resource type="PackedScene" uid="uid://qnhy1jlu3dkk" path="res://Scenes/settingsmenu/settingsmenu.tscn" id="13_0e0s6"]

[sub_resource type="Animation" id="Animation_yabwg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:top_level")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 1081)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ColorRect2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -78)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MarginContainer/HBoxContainer/VBoxContainer/startbutton:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../MarginContainer/HBoxContainer/VBoxContainer/settingsbutton:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../MarginContainer/HBoxContainer/VBoxContainer/exitbutton:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_csqo2"]
resource_name = "menu fade in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:top_level")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-6, 1080), Vector2(-6, 1040)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ColorRect2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4, -78), Vector2(-4, -38)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../MarginContainer/HBoxContainer/VBoxContainer/startbutton:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../MarginContainer/HBoxContainer/VBoxContainer/settingsbutton:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.96667, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../MarginContainer/HBoxContainer/VBoxContainer/exitbutton:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nf8ra"]
_data = {
"RESET": SubResource("Animation_yabwg"),
"menu fade in": SubResource("Animation_csqo2")
}

[node name="mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e6pdu")
tween_intensity = 1.2
tween_duration = 0.3

[node name="MainBG" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MainBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -994.0
offset_top = -605.0
offset_right = 3962.0
offset_bottom = 2461.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_oef5t")

[node name="MarginContainer" type="MarginContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 50

[node name="DynamicTitle" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DynamicTitle"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -564.0
offset_top = -374.0
offset_right = 564.0
offset_bottom = 212.0
theme_override_constants/separation = 70

[node name="Label" type="Label" parent="MarginContainer/DynamicTitle/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.887255, 0.650624, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_85lks")
theme_override_font_sizes/font_size = 120
text = "TOWER CRAWLER
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 4.27
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
z_as_relative = false
clip_contents = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.92
theme_override_constants/separation = 20
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="startbutton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
z_as_relative = false
clip_contents = true
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 2.98
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.211765, 0.666667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.596386, 0.390577, 9.62615e-08, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_constants/h_separation = 8
theme_override_fonts/font = ExtResource("3_mrjki")
theme_override_font_sizes/font_size = 45
keep_pressed_outside = true
text = "  Start
"
icon = ExtResource("5_n7u76")
flat = true
alignment = 0
clip_text = true
expand_icon = true

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="settingsbutton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0.666667, 0, 1)
theme_override_colors/font_pressed_color = Color(0.596078, 0.392157, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/h_separation = 6
theme_override_fonts/font = ExtResource("3_mrjki")
theme_override_font_sizes/font_size = 45
text = "Settings
"
icon = ExtResource("6_owkjg")
flat = true
alignment = 0
clip_text = true
expand_icon = true

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="exitbutton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.559523, 1.27546e-06, 3.36915e-07, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/h_separation = 3
theme_override_fonts/font = ExtResource("3_mrjki")
theme_override_font_sizes/font_size = 45
text = "	   Quit"
icon = ExtResource("8_ta4wk")
flat = true
alignment = 0
expand_icon = true

[node name="Separator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="clickSFX" type="AudioStreamPlayer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
stream = ExtResource("5_7a3fo")
volume_db = -9.0
pitch_scale = 0.48
bus = &"SFX"

[node name="hoverSFX" type="AudioStreamPlayer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
stream = ExtResource("12_82dxi")
volume_db = -3.0
pitch_scale = 0.5
bus = &"SFX"

[node name="DynamicBG" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="DynamicBG"]
show_behind_parent = true
layout_mode = 0
offset_left = 651.0
offset_top = -11.0
offset_right = 1283.0
offset_bottom = 1000.0
texture = ExtResource("11_dmb41")
flip_h = true

[node name="TextureRect7" type="TextureRect" parent="DynamicBG"]
show_behind_parent = true
layout_mode = 0
offset_left = -1676.0
offset_top = 539.0
offset_right = -877.0
offset_bottom = 1666.0
rotation = -1.5708
texture = ExtResource("11_dmb41")
flip_v = true

[node name="TextureRect3" type="TextureRect" parent="DynamicBG"]
show_behind_parent = true
layout_mode = 0
offset_left = -1385.0
offset_top = -34.0
offset_right = -586.0
offset_bottom = 1093.0
texture = ExtResource("11_dmb41")

[node name="TextureRect6" type="TextureRect" parent="DynamicBG"]
show_behind_parent = true
layout_mode = 0
offset_left = -1240.0
offset_top = 292.0
offset_right = -441.0
offset_bottom = 1419.0
texture = ExtResource("11_dmb41")

[node name="TextureRect4" type="TextureRect" parent="DynamicBG"]
show_behind_parent = true
layout_mode = 0
offset_left = 138.0
offset_top = 95.0
offset_right = 937.0
offset_bottom = 1222.0
texture = ExtResource("11_dmb41")

[node name="TextureRect5" type="TextureRect" parent="DynamicBG"]
show_behind_parent = true
layout_mode = 0
offset_left = -44.0
offset_top = 220.0
offset_right = 755.0
offset_bottom = 1347.0
texture = ExtResource("11_dmb41")
flip_h = true

[node name="background" type="ColorRect" parent="."]
top_level = true
layout_mode = 0
offset_left = -14.0
offset_top = -7.0
offset_right = 1926.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../background")
libraries = {
"": SubResource("AnimationLibrary_nf8ra")
}

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -964.0
offset_top = -618.0
offset_right = 973.0
offset_bottom = -544.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -963.0
offset_top = 1.0
offset_right = 961.0
offset_bottom = 75.0
color = Color(0, 0, 0, 1)

[node name="settings_menu" parent="." instance=ExtResource("13_0e0s6")]
visible = false
layout_mode = 1

[node name="backgroundmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_n4uxm")
bus = &"Music"
parameters/looping = true

[node name="loadedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_33fa0")
volume_db = 9.0
bus = &"SFX"
